Don't know why I didn't think of having the using height:100%; to solve my show.png.erb issues, but it worked. No more visible whitespace.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,6 +73,7 @@ h1,h3 {
 #img-posters {
   background: #000000;
   padding: 10px 30px 100px 30px;
+  height: 100%;
 }
 
 #poster {
